# Qtchat

./: .gitignore  CMakeLists.txt  MessageBubbleWidget.cpp  MessageBubbleWidget.h  README.md  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
config/: AppConfig.cpp  AppConfig.h
data/: mockdata.cpp  mockdata.h
database/: DatabaseManager.cpp  DatabaseManager.h
dialog/: AddFriendDialog.cpp  AddFriendDialog.h  LoginDialog.cpp  LoginDialog.h  RegisterDialog.cpp  RegisterDialog.h
model/: Contact.cpp  Contact.h  Conversation.cpp  Conversation.h  FriendRequest.h  Message.cpp  Message.h  User.cpp  User.h
network/: NetworkClient.cpp  NetworkClient.h
resources/styles/: app.qss
server/: ChatServer.cpp  ChatServer.h  main.cpp
service/: AiService.cpp  AiService.h
